rumbas/src/exam/snapshots/rumbas__exam__examples_examinput__compile_examples-29.snap
---
source: rumbas/src/exam/mod.rs
expression: "&example"
---
type: diagnostic
name:
  content:
    nonjmetext§:
      template_key: template_key
      default_value: ~
  placeholders:
    placeholder1:
      content:
        en: en value of placeholder1
        nl: nl value of placeholder1
      placeholders: {}
    placeholder2:
      content:
        en: en version of placeholder2
        nl: nl version of placeholder2
      placeholders: {}
locales:
  template_key: template_key
  default_value: ~
navigation:
  allow_printing:
    template_key: template_key
    default_value: ~
  can_regenerate:
    template_key: template_key
    default_value: ~
  confirm_when_leaving:
    template_key: template_key
    default_value: ~
  on_leave:
    action: warn_if_not_attempted
    message:
      content:
        nonjmetext§: "template:template_key"
      placeholders:
        placeholder1:
          content:
            en: en value of placeholder1
            nl: nl value of placeholder1
          placeholders: {}
        placeholder2:
          content:
            en: en version of placeholder2
            nl: nl version of placeholder2
          placeholders: {}
  show_names_of_question_groups:
    template_key: template_key
    default_value: ~
  show_steps:
    template_key: template_key
    default_value: ~
  show_title_page:
    template_key: template_key
    default_value: ~
  start_password: "template:template_key"
timing:
  duration_in_seconds: "template:template_key"
  allow_pause:
    template_key: template_key
    default_value: ~
  on_timeout:
    action: warn
    message:
      content:
        nonjmetext§: "template:template_key"
      placeholders:
        placeholder1:
          content:
            en: en value of placeholder1
            nl: nl value of placeholder1
          placeholders: {}
        placeholder2:
          content:
            en: en version of placeholder2
            nl: nl version of placeholder2
          placeholders: {}
  timed_warning:
    action: warn
    message:
      content:
        nonjmetext§: "template:template_key"
      placeholders:
        placeholder1:
          content:
            en: en value of placeholder1
            nl: nl value of placeholder1
          placeholders: {}
        placeholder2:
          content:
            en: en version of placeholder2
            nl: nl version of placeholder2
          placeholders: {}
feedback:
  percentage_needed_to_pass: "template:template_key"
  show_name_of_student:
    template_key: template_key
    default_value: ~
  show_current_marks:
    template_key: template_key
    default_value: ~
  show_maximum_marks:
    template_key: template_key
    default_value: ~
  show_answer_state:
    template_key: template_key
    default_value: ~
  allow_reveal_answer:
    template_key: template_key
    default_value: ~
  review:
    show_score:
      template_key: template_key
      default_value: ~
    show_feedback:
      template_key: template_key
      default_value: ~
    show_expected_answer:
      template_key: template_key
      default_value: ~
    show_advice:
      template_key: template_key
      default_value: ~
  advice:
    content:
      nonjmetext§:
        template_key: template_key
        default_value: ~
    placeholders:
      placeholder1:
        content:
          en: en value of placeholder1
          nl: nl value of placeholder1
        placeholders: {}
      placeholder2:
        content:
          en: en version of placeholder2
          nl: nl version of placeholder2
        placeholders: {}
  intro:
    content:
      nonjmetext§:
        template_key: template_key
        default_value: ~
    placeholders:
      placeholder1:
        content:
          en: en value of placeholder1
          nl: nl value of placeholder1
        placeholders: {}
      placeholder2:
        content:
          en: en version of placeholder2
          nl: nl version of placeholder2
        placeholders: {}
  feedback_messages:
    template_key: template_key
    default_value: ~
question_groups:
  template_key: template_key
  default_value: ~
numbas_settings:
  theme:
    template_key: template_key
    default_value: ~
diagnostic:
  script:
    custom:
      content:
        nonjmetext§: "file:path/to/file"
      placeholders:
        placeholder1:
          content:
            en: en value of placeholder1
            nl: nl value of placeholder1
          placeholders: {}
        placeholder2:
          content:
            en: en version of placeholder2
            nl: nl version of placeholder2
          placeholders: {}
  objectives:
    template_key: template_key
    default_value: ~
  topics:
    template_key: template_key
    default_value: ~

