rumbas/src/exam/snapshots/rumbas__exam__examples_examinput__compile_examples-33.snap
---
source: rumbas/src/exam/mod.rs
expression: "&example"
---
type: diagnostic
locales:
  template_key: template_key
  default_value: ~
name:
  template_key: template_key
  default_value: ~
navigation:
  allow_printing: "template:template_key"
  can_regenerate: "template:template_key"
  confirm_when_leaving: "template:template_key"
  on_leave:
    action: warn_if_not_attempted
    message: "template:template_key"
  show_names_of_question_groups: "template:template_key"
  show_steps: "template:template_key"
  show_title_page: "template:template_key"
  start_password: none
timing:
  duration_in_seconds: none
  allow_pause:
    template_key: template_key
    default_value: ~
  on_timeout:
    action: warn
    message: "template:template_key"
  timed_warning:
    action: warn
    message: "template:template_key"
feedback:
  percentage_needed_to_pass: none
  show_name_of_student:
    template_key: template_key
    default_value: ~
  show_current_marks:
    template_key: template_key
    default_value: ~
  show_maximum_marks:
    template_key: template_key
    default_value: ~
  show_answer_state:
    template_key: template_key
    default_value: ~
  allow_reveal_answer:
    template_key: template_key
    default_value: ~
  review: ~
  advice:
    template_key: template_key
    default_value: ~
  intro:
    template_key: template_key
    default_value: ~
  feedback_messages:
    template_key: template_key
    default_value: ~
question_groups:
  template_key: template_key
  default_value: ~
numbas_settings: ~
diagnostic:
  script:
    custom: "file:path/to/file"
  objectives:
    template_key: template_key
    default_value: ~
  topics:
    template_key: template_key
    default_value: ~

