rumbas/src/exam/snapshots/rumbas__exam__examples_examinput__compile_examples-34.snap
---
source: rumbas/src/exam/mod.rs
expression: "&example"
---
type: diagnostic
name: ~
locales: ~
navigation:
  allow_printing:
    template_key: template_key
    default_value: ~
  can_regenerate:
    template_key: template_key
    default_value: ~
  confirm_when_leaving:
    template_key: template_key
    default_value: ~
  on_leave:
    action: warn_if_not_attempted
    message:
      template_key: template_key
      default_value: ~
  show_names_of_question_groups:
    template_key: template_key
    default_value: ~
  show_steps:
    template_key: template_key
    default_value: ~
  show_title_page:
    template_key: template_key
    default_value: ~
  start_password: "template:template_key"
timing:
  duration_in_seconds: "template:template_key"
  allow_pause: ~
  on_timeout:
    action: warn
    message:
      template_key: template_key
      default_value: ~
  timed_warning:
    action: warn
    message:
      template_key: template_key
      default_value: ~
feedback:
  percentage_needed_to_pass: "template:template_key"
  show_name_of_student: ~
  show_current_marks: ~
  show_maximum_marks: ~
  show_answer_state: ~
  allow_reveal_answer: ~
  review:
    show_score: false
    show_feedback: false
    show_expected_answer: false
    show_advice: false
  advice: ~
  intro: ~
  feedback_messages: ~
question_groups: ~
numbas_settings:
  theme: nonjmetext§
diagnostic:
  script: "template:template_key"
  objectives: ~
  topics: ~

