rumbas/src/exam/snapshots/rumbas__exam__examples_examinput__compile_examples-37.snap
---
source: rumbas/src/exam/mod.rs
expression: "&example"
---
type: diagnostic
locales:
  template_key: template_key
  default_value: ~
name:
  content:
    nonjmetext§:
      template_key: template_key
      default_value: ~
  placeholders:
    placeholder1:
      content:
        en: en value of placeholder1
        nl: nl value of placeholder1
      placeholders: {}
    placeholder2:
      content:
        en: en version of placeholder2
        nl: nl version of placeholder2
      placeholders: {}
navigation:
  allow_printing: false
  can_regenerate: false
  confirm_when_leaving: false
  on_leave:
    action: prevent_if_not_attempted
    message:
      content:
        nonjmetext§:
          template_key: template_key
          default_value: ~
      placeholders:
        placeholder1:
          content:
            en: en value of placeholder1
            nl: nl value of placeholder1
          placeholders: {}
        placeholder2:
          content:
            en: en version of placeholder2
            nl: nl version of placeholder2
          placeholders: {}
  show_names_of_question_groups: false
  show_steps: false
  show_title_page: false
  start_password: "file:path/to/file"
timing:
  duration_in_seconds: 2
  allow_pause:
    template_key: template_key
    default_value: ~
  on_timeout: ~
  timed_warning: ~
feedback: ~
question_groups:
  template_key: template_key
  default_value: ~
numbas_settings:
  theme: ~
diagnostic: "template:template_key"

