rumbas/src/exam/snapshots/rumbas__exam__examples_examinput__compile_examples-38.snap
---
source: rumbas/src/exam/mod.rs
expression: "&example"
---
type: diagnostic
locales: ~
name:
  content: "file:path/to/file"
  placeholders:
    placeholder1:
      content:
        en: en value of placeholder1
        nl: nl value of placeholder1
      placeholders: {}
    placeholder2:
      content:
        en: en version of placeholder2
        nl: nl version of placeholder2
      placeholders: {}
navigation:
  allow_printing: "template:template_key"
  can_regenerate: "template:template_key"
  confirm_when_leaving: "template:template_key"
  on_leave:
    action: prevent_if_not_attempted
    message:
      content: "file:path/to/file"
      placeholders:
        placeholder1:
          content:
            en: en value of placeholder1
            nl: nl value of placeholder1
          placeholders: {}
        placeholder2:
          content:
            en: en version of placeholder2
            nl: nl version of placeholder2
          placeholders: {}
  show_names_of_question_groups: "template:template_key"
  show_steps: "template:template_key"
  show_title_page: "template:template_key"
  start_password: none
timing: "template:template_key"
feedback:
  percentage_needed_to_pass: 1.2
  show_name_of_student: false
  show_current_marks: false
  show_maximum_marks: false
  show_answer_state: false
  allow_reveal_answer: false
  review:
    show_score: false
    show_feedback: false
    show_expected_answer: false
    show_advice: false
  advice:
    content:
      nonjmetext§: "file:path/to/file"
    placeholders:
      placeholder1:
        content:
          en: en value of placeholder1
          nl: nl value of placeholder1
        placeholders: {}
      placeholder2:
        content:
          en: en version of placeholder2
          nl: nl version of placeholder2
        placeholders: {}
  intro:
    content:
      nonjmetext§: "file:path/to/file"
    placeholders:
      placeholder1:
        content:
          en: en value of placeholder1
          nl: nl value of placeholder1
        placeholders: {}
      placeholder2:
        content:
          en: en version of placeholder2
          nl: nl version of placeholder2
        placeholders: {}
  feedback_messages:
    - message: nonjmetext§
      threshold: nonjmetext§
    - message: "template:template_key"
      threshold: "template:template_key"
    - message:
        template_key: template_key
        default_value: ~
      threshold:
        template_key: template_key
        default_value: ~
    - message: ~
      threshold: ~
    - "template:template_key"
    - template_key: template_key
      default_value: ~
question_groups: ~
numbas_settings: "template:template_key"
diagnostic:
  template_key: template_key
  default_value: ~

